teams-img-align-fix

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -6396,7 +6396,7 @@ footer .item .copy-right p a {
   .team-img-holder {
   }
   .team-img {
-    padding-left: 95px;
+    padding-left: 45px;
     margin-left: -4px;
   }
   .min-area .content {
