--- a/public/assets/css/style2.css
+++ b/public/assets/css/style2.css
@@ -103,7 +103,7 @@
   .team-crs .item .info {
     padding: 15px;
     margin-right: 4px;
-    margin-left: 90px;
+    margin-left: 40px;
     background: #11141b;
     text-align: center;
     position: relative;
